{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 259,
  "lineage": "0dfdae2c-4365-5ce9-dc09-617bc9882794",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0151d0a8c5e8c0352",
            "arn": "arn:aws:ec2:us-east-1:361769586083:elastic-ip/eipalloc-0151d0a8c5e8c0352",
            "domain": "vpc",
            "id": "eipalloc-0151d0a8c5e8c0352",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-231-96.compute-1.amazonaws.com",
            "public_ip": "50.16.231.96",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:361769586083:instance/i-0d733245d6f7adca5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d733245d6f7adca5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "palleti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01cda8a1d6ae95e82",
            "private_dns": "ip-10-60-4-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.4.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0732b7a0af65c8f81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0256a372ec75fbd77",
            "tags": {
              "Name": "prod-pubserver"
            },
            "tags_all": {
              "Name": "prod-pubserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f20066c0a62c83af"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:361769586083:instance/i-0bdd85e8de5f8a532",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdd85e8de5f8a532",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "palleti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c13747759d7999e",
            "private_dns": "ip-10-60-1-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.1.231",
            "public_dns": "ec2-52-87-156-96.compute-1.amazonaws.com",
            "public_ip": "52.87.156.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026bcd33c266294c4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e2a229b22cdfa63",
            "tags": {
              "Name": "prod-privateserver"
            },
            "tags_all": {
              "Name": "prod-privateserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f20066c0a62c83af"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:internet-gateway/igw-0ad7c325486a72d53",
            "id": "igw-0ad7c325486a72d53",
            "owner_id": "361769586083",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kishore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:loadbalancer/app/kishore-alb/9b90df91e743c362",
            "arn_suffix": "app/kishore-alb/9b90df91e743c362",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "kishore-alb-743355911.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:loadbalancer/app/kishore-alb/9b90df91e743c362",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kishore-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f20066c0a62c83af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e2a229b22cdfa63"
              },
              {
                "subnet_id": "subnet-0a66a8ba79b5f1de0"
              }
            ],
            "subnets": [
              "subnet-08e2a229b22cdfa63",
              "subnet-0a66a8ba79b5f1de0"
            ],
            "vpc_id": "vpc-05b261f5a4dc88dd1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kishore2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:loadbalancer/net/kishore2-nlb/31f12eac6b5e29d2",
            "arn_suffix": "net/kishore2-nlb/31f12eac6b5e29d2",
            "dns_name": "kishore2-nlb-31f12eac6b5e29d2.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:loadbalancer/net/kishore2-nlb/31f12eac6b5e29d2",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kishore2-nlb",
            "security_groups": [
              "sg-0f20066c0a62c83af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e2a229b22cdfa63"
              },
              {
                "subnet_id": "subnet-0a66a8ba79b5f1de0"
              }
            ],
            "subnets": [
              "subnet-08e2a229b22cdfa63",
              "subnet-0a66a8ba79b5f1de0"
            ],
            "vpc_id": "vpc-05b261f5a4dc88dd1",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ajay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:listener/app/kishore-alb/9b90df91e743c362/57389db42fd395e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:listener/app/kishore-alb/9b90df91e743c362/57389db42fd395e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:loadbalancer/app/kishore-alb/9b90df91e743c362",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.kishore",
            "aws_lb_target_group.venkat",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ajay2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:listener/net/kishore2-nlb/31f12eac6b5e29d2/9e2860a15d3310d7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:listener/net/kishore2-nlb/31f12eac6b5e29d2/9e2860a15d3310d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:loadbalancer/net/kishore2-nlb/31f12eac6b5e29d2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.kishore2",
            "aws_lb_target_group.venkat2",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "venkat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0",
            "arn_suffix": "targetgroup/venkat-target/4e1374870395beb0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "venkat-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "venkat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67",
            "arn_suffix": "targetgroup/venkat2-tg/9fa975ceb1084c67",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "venkat2-tg",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0-20241108061731071700000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0",
            "target_id": "i-0d733245d6f7adca5"
          },
          "dependencies": [
            "aws_instance.prod",
            "aws_instance.prod1",
            "aws_lb_target_group.venkat",
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0-20241108061730668800000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat-target/4e1374870395beb0",
            "target_id": "i-0bdd85e8de5f8a532"
          },
          "dependencies": [
            "aws_instance.prod",
            "aws_instance.prod1",
            "aws_lb_target_group.venkat",
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67-20241108061723945400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67",
            "target_id": "i-0d733245d6f7adca5"
          },
          "dependencies": [
            "aws_instance.prod",
            "aws_lb_target_group.venkat2",
            "aws_security_group.sg",
            "aws_subnet.privatesubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67-20241108061730618800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:361769586083:targetgroup/venkat2-tg/9fa975ceb1084c67",
            "target_id": "i-0bdd85e8de5f8a532"
          },
          "dependencies": [
            "aws_instance.prod1",
            "aws_lb_target_group.venkat2",
            "aws_security_group.sg",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0151d0a8c5e8c0352",
            "association_id": "eipassoc-09a1c353592336c3d",
            "connectivity_type": "public",
            "id": "nat-0432874a7dfe6438f",
            "network_interface_id": "eni-07739a415f8aa9f76",
            "private_ip": "10.60.1.136",
            "public_ip": "50.16.231.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08e2a229b22cdfa63",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:route-table/rtb-0468949c5370e169d",
            "id": "rtb-0468949c5370e169d",
            "owner_id": "361769586083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0432874a7dfe6438f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private_rt"
            },
            "tags_all": {
              "Name": "prod-private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:route-table/rtb-035258d6b37d73f7e",
            "id": "rtb-035258d6b37d73f7e",
            "owner_id": "361769586083",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad7c325486a72d53",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public_rt"
            },
            "tags_all": {
              "Name": "prod-public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6e1b594d5f9230",
            "route_table_id": "rtb-0468949c5370e169d",
            "subnet_id": "subnet-0256a372ec75fbd77"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0844db6d0fa4d94ad",
            "route_table_id": "rtb-0468949c5370e169d",
            "subnet_id": "subnet-02732de93efc82c39"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a77a4226c7cf9b",
            "route_table_id": "rtb-0468949c5370e169d",
            "subnet_id": "subnet-00eb292adbc7038b5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012cbf2ea49806bd2",
            "route_table_id": "rtb-035258d6b37d73f7e",
            "subnet_id": "subnet-08e2a229b22cdfa63"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fe082bc3bf64396",
            "route_table_id": "rtb-035258d6b37d73f7e",
            "subnet_id": "subnet-0a66a8ba79b5f1de0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0054692abc214ae80",
            "route_table_id": "rtb-035258d6b37d73f7e",
            "subnet_id": "subnet-08b2cc05b53ceed56"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.publicsubnets",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:security-group/sg-0f20066c0a62c83af",
            "description": "allow selected rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f20066c0a62c83af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "prod-sg",
            "name_prefix": "",
            "owner_id": "361769586083",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg"
            },
            "tags_all": {
              "Name": "prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:subnet/subnet-0256a372ec75fbd77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.60.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0256a372ec75fbd77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769586083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private1"
            },
            "tags_all": {
              "Name": "prod-private1"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:subnet/subnet-02732de93efc82c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.60.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02732de93efc82c39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769586083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private2"
            },
            "tags_all": {
              "Name": "prod-private2"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:subnet/subnet-00eb292adbc7038b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.60.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eb292adbc7038b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769586083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private3"
            },
            "tags_all": {
              "Name": "prod-private3"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:subnet/subnet-08e2a229b22cdfa63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e2a229b22cdfa63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "361769586083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public1"
            },
            "tags_all": {
              "Name": "prod-public1"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:subnet/subnet-0a66a8ba79b5f1de0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.60.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a66a8ba79b5f1de0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "361769586083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public2"
            },
            "tags_all": {
              "Name": "prod-public2"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:subnet/subnet-08b2cc05b53ceed56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.60.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b2cc05b53ceed56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "361769586083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public3"
            },
            "tags_all": {
              "Name": "prod-public3"
            },
            "vpc_id": "vpc-05b261f5a4dc88dd1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:361769586083:vpc/vpc-05b261f5a4dc88dd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-07fdc5f22b5a0d228",
            "default_route_table_id": "rtb-0eb5a29e59ba1f9ac",
            "default_security_group_id": "sg-0e451d7114a36611f",
            "dhcp_options_id": "dopt-09a8d123ce54c819e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b261f5a4dc88dd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb5a29e59ba1f9ac",
            "owner_id": "361769586083",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}